modify submit manifest endpoint
